# httpsd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/projects/-home-magicaltux-projects-httpsd/memory/: MEMORY.md  api-positioning.md
.github/workflows/: ci.yml  release-plz.yml
samples/: config.toml
src/: compress.rs  config.rs  error.rs  handler.rs  interop.rs  lib.rs  mime.rs  privdrop.rs  session.rs  static_files.rs  tls.rs
src/acme/: client.rs  jose.rs  json.rs  manager.rs  mod.rs  store.rs
src/h2/: conn.rs  frame.rs  mod.rs
src/h3/: conn.rs  mod.rs
src/net/: clienthello.rs  gdns.rs  mod.rs
src/proto/: conn.rs  fields.rs  headers.rs  method.rs  mod.rs  request.rs  response.rs  status.rs  version.rs
src/router/: mod.rs  response.rs
src/rt/: common.rs  mio.rs  mod.rs  quic.rs  redirect.rs  route.rs  threadpool.rs  tokio.rs
tests/: server.rs
